Checkpoint before assistant change: Improve page layout and prevent horizontal scrolling
Apply box-sizing: border-box to all elements and set width: 100% on the body to ensure consistent layout and prevent horizontal overflow.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .title {
   text-align: center;
   font-size: 100px;
@@ -88,6 +92,9 @@ body {
   margin: 0px;
   padding: 0px;
   margin-left: 0px;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 
